tabshell-material/src/main/resources/com/techsenger/tabshell/material/style/material.css
/*
 * Copyright 2024-2026 Pavel Castornii.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
    Author: Pavel Castornii
*/

/*
    Root
*/
.root {
    /* -fx-font-size and -fx-font-family are set via settings, see FontManager */
    /* atlantafx doesn't provide the following colors, but they are used in
    other fx libraries; to prevent errors and warns they are set here */
    -fx-text-inner-color: transparent;
    -fx-control-inner-background: transparent;
    -fx-text-box-border: transparent;
    -fx-body-color: -color-bg-default;
}

/*
    Tab
*/
.tab-pane-pro > .tab-header-area > .tab-drop-position {
    -fx-background-color: -color-accent-5;
    -fx-pref-width: 2px;
}

/*
    Button
*/
.button.cross {
   -fx-background-color: -color-fg-default;
   -fx-shape: "M 0,0 H1 L 4,3 7,0 H8 V1 L 5,4 8,7 V8 H7 L 4,5 1,8 H0 V7 L 3,4 0,1 Z";
   -fx-scale-shape: false;
   -fx-min-width: 10 !important;
   -fx-max-width: 10 !important;
   -fx-pref-width: 10 !important;
   -fx-min-height: 10 !important;
   -fx-max-height: 10 !important;
   -fx-pref-height: 10 !important;
   -fx-padding: 10;
}

.button.cross:hover {
    -fx-cursor: hand;
    -fx-scale-x: 1.1;
    -fx-scale-y: 1.1;
}

.button.iconed,
.toggle-button.iconed {
    -fx-padding: 0;
    -fx-min-height: 2.1em;
    -fx-max-height: 2.1em;
    -fx-pref-height: 2.1em;
    -fx-min-width: 2.1em;
    -fx-max-width: 2.1em;
    -fx-pref-width: 2.1em;
}

.button .font-icon-view,
.toggle-button .font-icon-view {
    -fx-padding: 0;
    -fx-font-size: 1.4em;
}

.button.mini-iconed,
.toggle-button.mini-iconed {
    -fx-padding: 0;
    -fx-min-height: 1.4em;
    -fx-max-height: 1.4em;
    -fx-pref-height: 1.4em;
    -fx-min-width: 1.4em;
    -fx-max-width: 1.4em;
    -fx-pref-width: 1.4em;
}

.button.mini-iconed .font-icon-view,
.toggle-button.mini-iconed .font-icon-view {
    -fx-font-size: 1.2em;
}

/*
    Table/TreeTable
*/
.table-view, .tree-table-view {
    /*settings colors for selected, but not focused rows */
/*    -color-cell-fg-selected: -color-fg-default;
    -color-cell-bg-selected: -color-bg-default;*/
}

.table-view .column-header-background .column-header .label,
.tree-table-view .column-header-background .column-header .label {
    -fx-font-weight: normal;
}

.table-view.dense .column-header-background .column-header,
.tree-table-view.dense .column-header-background .column-header {
    -fx-fixed-cell-size: 2em; /* decimal values (e.g., 2.Xem) may remove the header border */
    -fx-size: 2em;
}

.table-view.dense, .tree-table-view.dense {
    -fx-fixed-cell-size: 2em;
}

.table-view.extra-dense .column-header-background .column-header,
.tree-table-view.extra-dense .column-header-background .column-header {
    -fx-fixed-cell-size: 2em; /* decimal values (e.g., 2.Xem) may remove the header border */
    -fx-size: 2em;
}

.table-view.extra-dense .table-row-cell,
.tree-table-view.extra-dense .tree-table-row-cell {
    -fx-cell-size: 1.65em;
}

.tree-table-view.extra-dense .tree-table-row-cell > .tree-disclosure-node {
  -fx-padding: 0 0.5em 0 0.5em;
}

.table-view.extra-dense.same-spacing-column .column-header-background .column-header .label,
.table-view.extra-dense.same-spacing-column .table-row-cell > .table-cell {
    -fx-padding: 0 0.25em 0 0.25em;
}

.table-view.extra-dense.same-spacing-column .column-header-background .column-header.first .label,
.table-view.extra-dense.same-spacing-column .table-row-cell > .table-cell.first {
    -fx-padding: 0 0.25em 0 0.5em;
}

.table-view.extra-dense.same-spacing-column .column-header-background .column-header.last .label,
.table-view.extra-dense.same-spacing-column .table-row-cell > .table-cell.last {
    -fx-padding: 0 0.5em 0 0.25em;
}

/*
    TreeView
*/
.tree-view.extra-dense .tree-cell {
  -fx-padding: 0.176em 0 0.175em 0;
}

/*
    Menu item.
*/
.menu-item {
    -fx-padding: 0.3em;
}

/*
    Combobox
*/
.combo-box.dense {
    -fx-max-height: 2.1em;
    -fx-pref-height: 2.1em;
    -fx-min-height: 2.1em;
    -fx-alignment: center;
    -fx-padding: 0 0 0 0.85em;
}
.combo-box.dense > .list-cell { /* list cell is te container with up/down arrows */
    -fx-padding: 0;
}

.combo-box.dense:editable {
    -fx-padding: 0;
}

.combo-box-base.dense:editable > .text-field {
    -fx-padding: 0.55em 0.85em 0.55em 0.85em;
}

.combo-box.dense .combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell {
    -fx-padding: 0.35em 0.45em 0.35em 0.45em;
}
/*
    In .no-selected combo-box selected item is not marked. See theme overriding files for details.
*/
.combo-box.no-selected .combo-box-popup .list-cell:selected {
    -fx-background-color: -color-bg-default;
    -fx-text-fill: -color-fg-default;
}

.combo-box.extra-dense > .combo-box {
    -fx-padding: 0;
}

.combo-box.extra-dense > .text-field {
    -fx-padding: 0.15em 0.6em 0.15em 0.6em;
}

/*
    TextField
*/
.text-field.dense {
    -fx-padding: 0.55em 0.85em 0.55em 0.85em;
    -fx-min-height: 2.1em;
    -fx-pref-height: 2.1em;
    -fx-max-height: 2.1em;
}

.text-field.extra-dense {
    -fx-padding: 0.15em 0.6em 0.15em 0.6em;
/*    -fx-min-height: 2.1em;
    -fx-pref-height: 2.1em;
    -fx-max-height: 2.1em;*/
}

/*
    Toolbar
*/

.tool-bar.blend {
  -fx-background-color: -color-border-muted, -color-bg-default;
}

.tool-bar.blend > .container > .button,
.tool-bar.blend > .container > .menu-button,
.tool-bar.blend > .container > .split-menu-button {
  -color-button-bg: -color-bg-default;
}

.tool-bar {
    -fx-padding: 4 4 5 4; /*bottom padding is 5 = 4 + 1 because of the botttom line */
    -fx-alignment: center-left;
    -fx-spacing: 6px;
}

.tool-bar .button,
.tool-bar .toggle-button {
    -fx-focus-traversable: false;
    -fx-padding: 0 0.65em 0 0.65em;
    -fx-max-height: 2.1em;
    -fx-min-height: 2.1em;
    -fx-pref-height: 2.1em;
}

.tool-bar .button.iconed,
.tool-bar .toggle-button.iconed {
    -fx-padding: 0;
    -fx-max-width: 2.1em;
    -fx-min-width: 2.1em;
    -fx-pref-width: 2.1em;
}

.tool-bar .button .font-icon-view,
.tool-bar .toggle-button .font-icon-view {
    -fx-padding: 0;
    -fx-font-size: 1.65em;
}

.tool-bar .separator:vertical {
    -fx-padding: 2;
}

.tool-bar.dense {
    -fx-min-height: -1;
    -fx-max-height: -1;
    -fx-padding: 1 4 2 4; /* 3 = 2(padding) + 1(bg-insetts) */
}

.tool-bar.dense .button.iconed,
.tool-bar.dense .toggle-button.iconed {
    -fx-padding: 0;
    -fx-max-width: 1.5em;
    -fx-min-width: 1.5em;
    -fx-pref-width: 1.5em;
    -fx-max-height: 1.5em;
    -fx-min-height: 1.5em;
    -fx-pref-height: 1.5em;
}

.tool-bar.dense .button .font-icon-view,
.tool-bar.dense .toggle-button .font-icon-view {
    -fx-padding: 0;
    -fx-font-size: 1.4em;
}

/*
    Label
*/
.label {
    -fx-graphic-text-gap: 6;
}

/*
    Font icon
*/
.font-icon-view {
    -fx-font-size: 1.2em;
    -fx-font-family: 'Material Design Icons';
    -fx-padding: 0;
    -fx-fill: -color-fg-default;
}

.font-icon-view.accent,
.icon-view-box.accent > .font-icon-view {
    -fx-fill: -color-accent-fg;
}

.font-icon-view.success,
.icon-view-box.success > .font-icon-view {
    -fx-fill: -color-success-fg;
}

.font-icon-view.warning,
.icon-view-box.warning > .font-icon-view {
    -fx-fill: -color-warning-fg;
}

.font-icon-view.danger,
.icon-view-box.danger > .font-icon-view {
    -fx-fill: -color-danger-fg;
}

.font-icon-view:accent,
.icon-view-box:accent > .font-icon-view {
    -fx-fill: -color-accent-fg;
}

.font-icon-view:success,
.icon-view-box:success > .font-icon-view {
    -fx-fill: -color-success-fg;
}

.font-icon-view:warning,
.icon-view-box:warning > .font-icon-view {
    -fx-fill: -color-warning-fg;
}

.font-icon-view:danger,
.icon-view-box:danger > .font-icon-view {
    -fx-fill: -color-danger-fg;
}

/*
    Hyperlink
*/
.hyperlink {
    -fx-border-color: transparent;
    -fx-padding: 0;
    -fx-graphic-text-gap: 5;
    -fx-underline: false;
}

.hyperlink.no-url, .hyperlink.no-url:hover, .hyperlink.no-url:armed, hyperlink.no-url:visited, .hyperlink.no-url:disabled {
    -fx-text-fill: -color-fg-default;
    -fx-cursor: default;
}

/*
    MenuButton
*/
.menu-button.extra-dense > .label {
  -fx-padding: 0.15em 0.6em 0.15em 0.6em;
}

/*
    TabPane
*/
/* When floating tabs are used the top 1px of the content is not displayed (AtlantaFX bug?). We fix it via padding. */
.tab-pane.floating  > .tab-content-area {
    -fx-padding: 1 0 0 0;
}

.tab-pane.hidden-tabs {
    -fx-tab-max-height: 0;
}

.tab-pane.hidden-tabs .tab-header-area {
    visibility: hidden;
    -fx-min-height: 0;
    -fx-pref-height: 0;
    -fx-max-height: 0;
}

.tab-pane > .tab-header-area > .control-buttons-tab > .container > .tab-down-button .context-menu .radio-menu-item .graphic-container {
    -fx-font-size: 1em;
    -fx-font-family: 'Material Design Icons';
}

/*
    StatusBar
*/
.status-bar {
    -fx-background-color: -color-border-subtle, -color-bg-default;
    -fx-background-insets: 0, 1 0 0 0;
    -fx-pref-height: 28px;
}

/*
    RichTextFX see https://github.com/FXMisc/RichTextFX/wiki/RichTextFX-CSS-Reference-Guide

    Important for font family and size stylesheet is created dynamically on the base of settings.
*/
.styled-text-area {
    -fx-font-size: 1em;
    -fx-padding: 0;
    -fx-border-width: 0;
    -fx-background-color: -color-bg-default;
}

.styled-text-area .text {
    -fx-fill: -color-fg-default;
}

.styled-text-area .paragraph-text {
    -fx-padding: 0 0 0 5;
}

.styled-text-area .main-selection {
    -fx-fill: -color-bg-selection;
}

.styled-text-area .found {
    -fx-fill: -color-fg-found;
    -rtfx-background-color: -color-bg-found;
}

.styled-text-area .caret {
    -fx-stroke: -color-fg-default;
}

/* In .lineno and .lineno .text we need to set same font not to get extra pixels on focus. */
.styled-text-area .lineno {
    -fx-background-color: -color-bg-inset;
    -fx-font-size: 1em;
    -fx-padding: 0 6 0 6;/* SizeConstants.HALF_INSET */
}

.styled-text-area .lineno .text {
    -fx-font-size: 1em;
    -fx-fill: -color-fg-muted;
}

/* there is one more label in .lineno for fold graphics, we need to hide it not to add extra pixels on focus */
.styled-text-area .lineno .label {
    -fx-max-width: 0;
    -fx-min-width: 0;
    -fx-pref-width: 0;
}

.styled-text-area-tab2 .paragraph-text {
    -fx-tab-size: 2;
}

.styled-text-area-tab4 .paragraph-text {
    -fx-tab-size: 4;
}

.styled-text-area-tab8 .paragraph-text {
    -fx-tab-size: 8;
}

